--- a/DeliveryProjectAzureApi/appsettings.json
+++ b/DeliveryProjectAzureApi/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlAzure": "Data Source=xyzsql.database.windows.net;Initial Catalog=xyzdb;Persist Security Info=True;User ID=adminsql;Password=Admin123"
+  },
+  "ApiOAuth": {
+    "Issuer": "https://localhost:7019",
+    "Audience": "DeliveryProjectAzureApi",
+    "SecretKey": "n^ftnNcPo7M7\\WL&J&C6hn|ñ"
+  }
 }
