Commit Api Definitive

--- a/DeliveryProjectAzureApi/appsettings.json
+++ b/DeliveryProjectAzureApi/appsettings.json
@@ -13,5 +13,8 @@
     "Issuer": "https://localhost:7019",
     "Audience": "DeliveryProjectAzureApi",
     "SecretKey": "n^ftnNcPo7M7\\WL&J&C6hn|ñ"
+  },
+  "KeyVault": {
+    "VaultUri": "https://deliveryprojectkeyvault.vault.azure.net/"
   }
 }
